Implement SaveAs. Menubar creation now in createMenuBar.
Created 'record Sign' for import/export use.